testing issue with horizontal scroll, I think its the plugin

--- a/frontend/src/components-css/Header.css
+++ b/frontend/src/components-css/Header.css
@@ -23,12 +23,13 @@
 .login-panel {
   max-width: 100%;
   height: auto;
-  width: 100%;
+  width: auto;
   top: 0;
   z-index: 2000;
   padding: 0 20px 0 20px;
   background-color: #333333;
   position: relative;
+  border: 1px solid red;
 }
 
 .header {
@@ -101,8 +102,7 @@
   }
 
   .login-panel {
-    padding: 0;
-    max-width: 100%;
+    padding: 0 20px 0 20px;
   }
 
 }
